--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body {
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+#__next {
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
